commented height out
height commented out in the header section.

--- a/forGithub/style.css
+++ b/forGithub/style.css
@@ -5,7 +5,7 @@
 .header-section {
     background-color: rgb(32, 32, 7);
     color: azure;
-    height: 85vh;
+/*     height: 85vh; */
     text-align: center;
 }
 
