Height added to Image
added height to image to prevent overflow.

--- a/forGithub/style.css
+++ b/forGithub/style.css
@@ -37,6 +37,8 @@
 
 .header-section .header-section-text #verify-image {
     margin: 20px;
+    height: 40px;
+
 }
 
 .header-section .header-section-text .review .text-review {
