--- a/forGithub/style.css
+++ b/forGithub/style.css
@@ -37,7 +37,7 @@
 
 .header-section .header-section-text #verify-image {
     margin: 20px;
-    height: 40px;
+    width: 90%;
 }
 
 .header-section .header-section-text .review .text-review {
